edited the README.md

--- a/yolov5/simple_custom_dataloader_wo_labels.ipynb
+++ b/yolov5/simple_custom_dataloader_wo_labels.ipynb
@@ -13,7 +13,7 @@
     "- I uses the existing dataloader, with slight modifications, metioned in the assigned pdf[crop, random paste]. So, caching, augmentaions are enebled as well.\n",
     "- The template image used for template matching can be changed via argparse, `--template` flag. \n",
     "\n",
-    "- The code for this is provided in the `CustomLoadImagesAndLabels` class at `utils/custom_dataloaders.py` file."
+    "- The code for this is provided in the `CustomDataset` class at `utils/only_img_cus_dataloaders.py` file."
    ]
   },
   {
